syntax = "proto3";

package bytebase.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "v1/annotation.proto";

option go_package = "github.com/bytebase/bytebase/backend/generated-go/v1";

// AccessGrantService manages temporary access grants within projects.
service AccessGrantService {
  // Gets an access grant by name.
  rpc GetAccessGrant(GetAccessGrantRequest) returns (AccessGrant) {
    option (google.api.http) = {get: "/v1/{name=projects/*/accessGrants/*}"};
    option (google.api.method_signature) = "name";
    option (bytebase.v1.permission) = "bb.accessGrants.get";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Lists access grants in a project.
  rpc ListAccessGrants(ListAccessGrantsRequest) returns (ListAccessGrantsResponse) {
    option (google.api.http) = {get: "/v1/{parent=projects/*}/accessGrants"};
    option (google.api.method_signature) = "parent";
    option (bytebase.v1.permission) = "bb.accessGrants.list";
    option (bytebase.v1.auth_method) = IAM;
  }

  // Creates an access grant.
  rpc CreateAccessGrant(CreateAccessGrantRequest) returns (AccessGrant) {
    option (google.api.http) = {
      post: "/v1/{parent=projects/*}/accessGrants"
      body: "access_grant"
    };
    option (google.api.method_signature) = "parent,access_grant";
    option (bytebase.v1.permission) = "bb.accessGrants.create";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }

  // Activates a pending access grant.
  rpc ActivateAccessGrant(ActivateAccessGrantRequest) returns (AccessGrant) {
    option (google.api.http) = {
      post: "/v1/{name=projects/*/accessGrants/*}:activate"
      body: "*"
    };
    option (google.api.method_signature) = "name";
    option (bytebase.v1.permission) = "bb.accessGrants.activate";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }

  // Revokes an active access grant.
  rpc RevokeAccessGrant(RevokeAccessGrantRequest) returns (AccessGrant) {
    option (google.api.http) = {
      post: "/v1/{name=projects/*/accessGrants/*}:revoke"
      body: "*"
    };
    option (google.api.method_signature) = "name";
    option (bytebase.v1.permission) = "bb.accessGrants.revoke";
    option (bytebase.v1.auth_method) = IAM;
    option (bytebase.v1.audit) = true;
  }

  // Searches access grants created by the caller.
  rpc SearchMyAccessGrants(SearchMyAccessGrantsRequest) returns (SearchMyAccessGrantsResponse) {
    option (google.api.http) = {
      post: "/v1/{parent=projects/*}/accessGrants:searchMy"
      body: "*"
    };
    option (bytebase.v1.permission) = "bb.accessGrants.get";
    option (bytebase.v1.auth_method) = CUSTOM;
  }
}

message AccessGrant {
  option (google.api.resource) = {
    type: "bytebase.com/AccessGrant"
    pattern: "projects/{project}/accessGrants/{access_grant}"
  };

  // The name of the access grant, generated by the server.
  // Format: projects/{project}/accessGrants/{access_grant}
  // The {access_grant} segment is a server-generated unique ID.
  string name = 1;

  // The creator of the access grant.
  // Format: users/{email}
  string creator = 2 [(google.api.field_behavior) = REQUIRED];

  // The status of the access grant.
  // An ACTIVE grant with `expire_time` in the past is effectively expired
  // and no longer authorizes access. Use `expire_time` to determine
  // whether an ACTIVE grant has expired.
  Status status = 3 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The expiration of the access grant.
  // When the current time exceeds `expire_time`, an ACTIVE grant is
  // considered expired and no longer authorizes access.
  oneof expiration {
    // The expiration time of the access grant.
    google.protobuf.Timestamp expire_time = 4;

    // Input only. The time-to-live duration for the access grant.
    // The server computes `expire_time` from this value at creation time.
    google.protobuf.Duration ttl = 11 [(google.api.field_behavior) = INPUT_ONLY];
  }

  // The issue associated with the access grant.
  // Can be empty.
  // Format: projects/{project}/issues/{issue}
  string issue = 5 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The target databases for this access grant.
  // Format: instances/{instance}/databases/{database}
  repeated string targets = 6 [(google.api.field_behavior) = REQUIRED];

  // The query permission granted.
  string query = 7;

  // Whether the grant allows unmasking sensitive data.
  bool unmask = 8;

  google.protobuf.Timestamp create_time = 9 [(google.api.field_behavior) = OUTPUT_ONLY];

  google.protobuf.Timestamp update_time = 10 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The status of the access grant.
  enum Status {
    STATUS_UNSPECIFIED = 0;
    // The access grant is pending approval.
    PENDING = 1;
    // The access grant is active. Check `expire_time` to determine
    // whether the grant is still valid or has expired.
    ACTIVE = 2;
    // The access grant has been revoked.
    REVOKED = 3;
  }

  string reason = 12;
}

message GetAccessGrantRequest {
  // The name of the access grant to retrieve.
  // Format: projects/{project}/accessGrants/{access_grant}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/AccessGrant"}
  ];
}

message ListAccessGrantsRequest {
  // The parent project of the access grants.
  // Format: projects/{project}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Project"}
  ];

  // The maximum number of access grants to return.
  int32 page_size = 2;

  // A page token from a previous ListAccessGrants call.
  string page_token = 3;

  // Filter expression using AIP-160 syntax.
  // Supported fields:
  // - name: the fullname in "projects/{project}/accessGrants/{access_grant}" format, support "==" operator.
  // - creator: the creator name in "users/{email}" format, support "==" operator.
  // - status: the access status, support "==" and "in" operator.
  // - issue: the access issue fullname, support "==" operator.
  // - expire_time: the access expire time in "2006-01-02T15:04:05Z07:00" format, support ">=", ">", "<=" and "<" operator.
  // - create_time: the access creation time in "2006-01-02T15:04:05Z07:00" format, support ">=", ">", "<=" and "<" operator.
  // - query: the access query, support "==" and ".contains(xx)" operator
  //
  // Examples:
  // - creator == "users/dev@example.com"
  // - status == "ACTIVE"
  // - status in ["ACTIVE", "PENDING"]
  // - creator == "users/dev@example.com" && status == "ACTIVE"
  // - issue == "projects/x/issues/123"
  // - status == "ACTIVE" && expire_time > "2024-02-01T00:00:00Z"
  string filter = 4;
}

message ListAccessGrantsResponse {
  // The access grants from the specified request.
  repeated AccessGrant access_grants = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
}

message CreateAccessGrantRequest {
  // The parent project for the access grant.
  // Format: projects/{project}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Project"}
  ];

  // The access grant to create.
  AccessGrant access_grant = 2 [(google.api.field_behavior) = REQUIRED];
}

message ActivateAccessGrantRequest {
  // The name of the access grant to activate.
  // Format: projects/{project}/accessGrants/{access_grant}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/AccessGrant"}
  ];
}

message RevokeAccessGrantRequest {
  // The name of the access grant to revoke.
  // Format: projects/{project}/accessGrants/{access_grant}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/AccessGrant"}
  ];
}

message SearchMyAccessGrantsRequest {
  // The parent project to search in.
  // Format: projects/{project}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "bytebase.com/Project"}
  ];

  // The maximum number of access grants to return.
  int32 page_size = 2;

  // A page token from a previous SearchMyAccessGrants call.
  string page_token = 3;

  // Filter expression using AIP-160 syntax.
  // Supported fields: name, status, expire_time, create_time
  // Examples:
  //   - 'name = "projects/x/accessGrants/uuid"'
  //   - 'status = "ACTIVE"'
  //   - 'status = "ACTIVE" AND expire_time > "2024-02-01T00:00:00Z"'
  string filter = 4;
}

message SearchMyAccessGrantsResponse {
  // The access grants from the specified request.
  repeated AccessGrant access_grants = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
}
